syntax = "proto3";

package com.rtrk.protobuf;

option java_package = "com.rtrk.atcommands";
option java_outer_classname = "ATCommands";
message HTTPCommand {
	HTTPMessageType messageType = 1;
	bool test = 2;
	int32 urlLength = 3;
	int32 inputTime = 4;
	int32 toReadTime = 5;
	int32 waitTime = 6;
	int32 bodySize = 7;
	string fileName = 8;
	int32 length = 9;
	int32 dlSize = 10;
	int32 contentLength = 11;
	Error errorcode = 12;
	Error error = 13;
	bytes data = 14;
}

message FileCommand {
	FileMessageType messageType = 1;
	string namePattern = 2;
	int32 freeSize = 3;
	int32 totalSize = 4;
	int32 maxallocSize = 5;
	int32 ufsFileSize = 6;
	int32 ufsFileNumber = 7;
	string fileName = 8;
	int32 fileSize = 9;
	int32 ramSize = 10;
	int32 uploadSize = 11;
	int32 timeout = 12;
	bool ackMode = 13;
	string srcFileName = 14;
	string destFileName = 15;
	bool copy = 16;
	bool owerwrite = 17;
	int32 mode = 18;
	int32 length = 19;
	string fileHandle = 20;
	int32 readLength = 21;
	int32 writtenLength = 22;
	int32 totalLength = 23;
	int32 offset = 24;
	int32 position = 25;
	Error error = 26;
}

message FTPCommand {
	FTPMessageType messageType = 1;
	string hostName = 2;
	int32 port = 3;
	Error error = 4;
	string fileName = 5;
	int32 fileSize = 6;
	int32 time = 7;
	int32 upSize = 8;
	int32 dwSize = 9;
	string pathName = 10;
	string userName = 11;
	string password = 12;
	int32 type = 13;
	int32 value = 14;
	FTPServiceStatus status = 15;
	int32 length = 16;
	string sourceName = 17;
	string targetName = 18;
	string name = 20;
	int32 ret = 19;
	string dirName = 21;
}

message MMSCommand {
	MMSMessageType messageType = 1;
	string mmscUrl = 2;
	int32 type = 3;
	string gateway = 4;
	int32 port = 5;
	int32 valid = 6;
	int32 priority = 7;
	bool sendReport = 8;
	bool readReport = 9;
	int32 visible = 10;
	int32 class = 11;
	string charset = 12;
	int32 inputMode = 13;
	int32 function = 14;
	int32 operate = 15;
	string opstring = 16;
	int32 from = 17;
	int32 to = 18;
	int32 mmsIndex = 19;
	string fromAddress = 20;
	bool ind = 21;
	string date = 22;
	string time = 23;
	int32 messageSize = 24;
	int32 para = 25;
	string fileName = 26;
	int32 downloadSize = 27;
	int32 checksum = 28;
	int64 durattribute = 29;
	int32 smsToSim = 30;
	bool enableUSC2 = 31;
	bool bigEndian = 32;
	int32 outputStyle = 33;
	int32 fileType = 34;
	Error error = 35;
}

message QuecCellCommand {
	QuecCellMessageType messageType = 1;
	int32 stat = 2;
	string operInString = 3;
	string operInShortString = 4;
	int32 operInNumber = 5;
	int32 indexN = 6;
	int32 lac = 7;
	int32 ci = 8;
	int32 bsic = 9;
	int32 rxlev = 10;
	double arfcn = 11;
	int32 mode = 12;
	int32 dump = 13;
	int32 mcc = 14;
	int32 mnc = 15;
	int32 cellID = 16;
	int32 bcch = 17;
	double dbm = 18;
	int32 c1 = 19;
	int32 c2 = 20;
	double txp = 21;
	int32 rla = 22;
	int32 ts = 23;
	int32 maio = 24;
	int32 hsn = 25;
	int32 tch = 26;
	int32 ta = 27;
	int32 rxqSub = 28;
	int32 rxqFull = 29;
	int32 nCell = 30;
	bool band100 = 31;
	int32 status = 32;
	int32 rrState = 33;
	string chType = 34;
	bool automaticReport = 35;
	int32 line = 36;
	string forbiddenData = 37;
	int32 band = 38;
}

message RecordingCommand {
	RecordingMessageType messageType = 1;
	int32 state = 2;
	string fileName = 3;
	int32 format = 4;
	bool repeat = 5;
	int32 volume = 6;
	int32 channel = 7;
	Error error = 8;
}

message SMTPCommand {
	SMTPMessageType messageType = 1;
	string user = 2;
	string password = 3;
	string address = 4;
	string name = 5;
	string serverAddress = 6;
	int32 port = 7;
	int32 mode = 8;
	int32 type = 9;
	string emailAddress = 10;
	int32 result = 11;
	int32 charset = 12;
	string title = 13;
	int32 timeout = 14;
	int32 fileIndex = 15;
	string fileName = 16;
	int32 fileSize = 17;
	int32 value = 18;
}

message STKCommand{
	STKMessageType messageType = 1;
	int32 n = 2;
	string profile = 3;
	string satCommand = 4;
	string terminalResponse = 5;
}

message GeneralCommand{
	GeneralMesssageType messageType = 1;
	int32 value = 2;
	int32 n = 3;
	int32 fun = 4;
	int32 rst = 5;
	string chset = 6;
}

message SerialInterfaceControlCommand{
	SerialInterfaceControlMessageType messageType = 1;
	int32 value = 2;
	int32 format = 3;
	int32 partity = 4;
	int32 DCEByDTE = 5;
	int32 DTEByDCE = 6;
	int32 rate = 7;
	int32 mode = 8;
	int32 subset = 9;
	int32 portSpeed = 10;
	int32 N1 = 11;
	int32 T1 = 12;
	int32 N2 = 13;
	int32 T2 = 14;
	int32 T3 = 15;
	int32 k = 16;
	int32 baudRate = 17;
	int32 dataBits = 18;
	int32 stopBits = 19;
}

message StatusControlCommand{
	StatusControlMessageType messageType = 1;
	int32 locationID = 2;
	string cause = 3;
	int32 pas = 4;
	int32 status = 5;
	int32 refuseSMS = 6;
	int32 refuseCall = 7;
	int32 mode = 8;
	string extunsol = 9;
	int32 state = 10;
	int32 enable = 11;
	string time = 12;
	string ds = 13;
	int32 insertValue = 14;
	int32 pinChoice = 15;
	int32 insertStatus = 16;
	int32 n = 17;
	int32 type = 18;
}

message SIMRelatedCommand{
	SIMRelatedMessageType messageType = 1;
	string fac = 2;
	int32 mode = 3;
	string password = 4;
	int32 class = 5;
	int32 status = 6;
	string pin = 7;
	string newPin = 8;
	int32 pwdLength = 9;
	string oldPwd = 10;
	string newPwd = 11;
	int32 command = 12;
	int32 fileID = 13;
	int32 P1 = 14;
	int32 P2 = 15;
	int32 P3 = 16;
	int32 SW1 = 17;
	int32 SW2 = 18;
	string data = 19;
	string response = 20;
	int32 length = 21;
	string ccidData = 22;
	int32 GID1 = 23;
	int32 GID2 = 24;
	string spn = 25;
	int32 displayMode = 26;
	int32 chv1 = 27;
	int32 chv2 = 28;
	int32 puk1 = 29;
	int32 puk2 = 30;
}

message NetworkServiceCommand{
	NetworkServiceMessageType messageType = 1;
	int32 status = 2;
	int32 operator = 3;
	int32 mode = 4;
	int32 format = 5;
	int32 n = 6;
	string locationAreaCode = 7;
	string cellID = 8;
	int32 rssi = 9;
	int32 ber = 10;
	int32 index = 11;
	string numericn = 12;
	string alphan = 13;
	string opBand = 14;
	int32 dump = 15;
	int32 band = 16;
	int32 freq = 17;
	int32 dbm = 18;
	int32 band1900 = 19;
	int32 arfcn1 = 20;
	int32 arfcn2 = 21;
	int32 arfcn3 = 22;
}

enum NetworkServiceMessageType{
	OPERATOR_SELECTION = 0;
	NETWORK_REGISTRATION = 1;
	SIGNAL_QUALITY_REPORT = 2;
	PREFERRED_OPERATOR_LIST = 3;
	READ_OPEARATR_NAMES = 4;
	GET_AND_SET_MOBILE_OPERATION_BAND = 5;
	NETWORK_SERVICE_SWITCH_ON_OR_OFF_ENGINEERING_MODE = 6;
	SCAN_POWER_OF_GSM_FREQUENCY = 7;
	LOCK_GSM_FREQUENCY = 8;
}

enum SIMRelatedMessageType{
	REQUEST_IMSI = 0;
	FACILITY_LOCK = 1;
	ENTER_PIN = 2;
	CHANGE_PASSWORD = 3;
	RESTRICTED_SIM_ACCESS = 4;
	GENERIC_SIM_ACCESS = 5;
	CHANGE_PS_SUPER_PASSWORD = 6;
	SHOW_CCID = 7;
	SHOW_CCID_QCCID = 8;
	GET_SIM_CARD_GROUP_IDENTIFIER = 9;
	SELECT_SIM_CARD_OPERATING_VOLTAGE = 10;
	GET_SERVICE_PROVIDER_NAME = 11;
	TIME_REMAINING_TO_INPUT_SIM_PIN_PUK = 12;
}

enum StatusControlMessageType{
	EXTENDED_ERROR_REPORT = 0;
	MOBILE_EQUIPMENT_ACTIVITY_STATUS = 1;
	INDICATE_RI_WHEN_USING_URC = 2;
	SHOW_STATE_OF_MOBILE_ORIGINATED_CELL = 3;
	REFUSE_TO_RECEIVE_SMS_INCOMING_CALL_OR_NOT = 4;
	ENABLE_OR_DISABLE_INITIAL_URC_PRESENTATION = 5;
	ENABLE_OR_DISABLE_PROPRIETARY_UNSOLICITED_INDICATIONS = 6;
	QUERY_STATE_OF_INITIALIZATION = 7;
	QUERY_GSM_NETWORK_STATUS = 8;
	NETWORK_TIME_SYNCHRONIZED = 9;
	OBTAIN_LATEST_NETWORK_TIME_SYNCHRONIZED = 10;
	NETWORK_TIME_SYNCHRONIZATION_AND_UPDATE_THE_RTC_TIME = 11;
	NETWORK_TIME_SYNCHRONIZATION_REPORT = 12;
	SWITCH_ON_OR_OFF_DETECTING_SIM_CARD = 13;
	SIM_INSERTED_STATUS_REPORTING = 14;
	CSC_CALL_OR_GPRS_PDP_CONTEXT_TERMINAL_INDICATION = 15;
}

enum SerialInterfaceControlMessageType{
	SET_DCD_FUNCTION_MODE = 0;
	SET_DTR_FUNCTION_MODE = 1;
	SET_TE_TA_CONTROL_CHARACTER_FRAMING = 2;
	SET_TE_TA_LOCAL_DATA_FLOW_CONTROL = 3;
	SET_TE_TA_LOCAL_DATA_RATE_REPORTING_MODE = 4;
	SET_TE_TA_FIXED_LOCAL_RATE = 5;
	MULTIPLEXER_CONTROL = 6;
	CONFIGURE_DUAL_UART_FUNCTION = 7;
	CONFIGURE_PARAMETERS_OF_THE_DUAL_UART = 8;
}

enum GeneralMesssageType{
	DISPLAY_PRODUCT_IDENTIFICATION_INFORMATION = 0;
	REQUEST_MANUFACTURER_IDENTIFICATION = 1;
	REQUEST_TA_MODEL_IDENTIFICATION = 2;
	REQUEST_TA_REVISION_IDENTIFICATION = 3;
	REQUEST_GLOBAL_OBJECT_IDENTIFICATION = 4;
	REQUEST_MANUFACTURER_IDENTIFICATION_CGMI = 5;
	REQUEST_MODEL_IDENTIFICATION = 6;
	REQUEST_TA_REVISION_IDENTIFICATION_CGMR = 7;
	REQUEST_IMEI = 8;
	REQUEST_PRODUCT_SERIAL_NUMBER_IDENTIFICATION = 9;
	REQUEST_IMEI_QGSN = 10;
	SET_ALL_CURRENT_PARAMETERS_TO_MANUFACTURER_DEFAULTS = 11;
	DISPLAY_CURRENT_CONFIGURATION = 12;
	STORE_CURRENT_PARAMETERS_TO_USER_DEFINED_PROFILE = 13;
	SET_RESULT_CODE_PRESENTATION_CODE = 14;
	TA_RESPONSE_FORMAT = 15;
	SET_CONNECT_RESULT_CODE_FORMAT = 16;
	SET_ALL_CURRENT_PARAMETERS_TO_USER_DEFINED_PROFILE = 17;
	SET_PHONE_FUNCTIONALITY = 18;
	POWER_OFF = 19;
	REPORT_MOBILE_EQUIPMENT_ERROR = 20;
	SET_TE_CHARACTER_SET = 21;
	REQUEST_COMPLETE_TA_CAPABILITIES_LIST = 22;
}

enum SMTPMessageType {
	SET_THE_USER_NAME_FOR_AUTHENTICATION = 0;
	SET_THE_PASSWORD_FOR_AUTHENTICATION = 1;
	SET_THE_EMAIL_ADDRESS_OF_THE_SENDER = 2;
	SET_THE_SENDERS_NAME = 3;
	SET_THE_ADDRESS_AND_PORT_OD_SMTP_SERVER = 4;
	ADD_OR_DELETE_RECIPIENTS = 5;
	EDIT_THE_SUBJECT_OF_THE_EMAIL = 6;
	EDIT_THE_CONTENT_OF_THE_EMAIL = 7;
	ADD_AN_ATTACHMENT_FOR_THE_EMAIL = 8;
	DELETE_AN_ATTACHMENT = 9;
	CLEAR_ALL_CONFIGURATIONS_AND_CONTENTS = 10;
	SMTP_CONFIGURATION = 11;
	SEND_EMAIL = 12;
}

enum RecordingMessageType {
	RECORD_MEDIA_FILE = 0;
	PLAY_MEDIA_FILE = 1;
	STOP_PLAYING_MEDIA_FILE = 2;
}

enum QuecCellMessageType {
	SCAN_BASIC_STATION_INFORMATION = 0;
	SWITCH_ON_OR_OFF_ENGINEERING_MODE = 1;
	LOCK_THE_BASE_STATION = 2;
	SCAN_ARFCN_RECEIVING_LEVEL = 3;
	GET_CHANNEL_INFORMATION = 4;
	GET_LAST_VALID_TA_VALUE = 5;
	FORBID_OPERATOR = 6;
}

enum MMSMessageType {
	SET_THE_URL_OF_THE_MMSC = 0;
	SET_THE_MMS_PROXY = 1;
	SET_THE_PARAMETER_FOR_SENDING_MMS_MESSAGE = 2;
	SET_CHARACTER_SETS_AND_INPUT_MODE = 3;
	WRITE_MMS_MESSAGE = 4;
	SEND_MMS_MESSAGE = 5;
	MENAGE_THE_RECEIVED_MMS_MESSAGE = 6;
	READ_RECEIVED_MMS_MESSAGE = 7;
	RECEIVE_MMS_MESSAGE_FROM_THE_MMSC = 8;
	SET_PRIORITY_OF_MMS_MESSAGE_AND_CALL = 9;
	SET_DUR_ATTRIBUTE_VALUE_IN_THE_SMIL_SCRIPT = 10;
	SET_MMS_SMS_TRANSACTOR = 11;
	ENABLE_OUTPUT_TEXT_IN_USC2 = 12;
	OUTPUT_FILE_STYLE = 13;
}

enum STKMessageType {
	TURN_ON_OFF_STK_FUNCTION = 0;
	STK_PROFILE_DOWNLOAD = 1;
	STK_ENVELOPE_COMMAND = 2;
	STK_TERMINAL_RESPONSE = 3;
	TRIGGER_STK_CALL = 4;
	TRIGGER_STK_SMS = 5;
	TRIGGER_STK_SS = 6;
	TRIGGER_STK_USSD = 7;
	TRIGGER_STK_DTMF = 8;
}

enum FTPServiceStatus {
	IDLE = 0;
	OPENING = 1;
	OPENED = 2;
	WORKING = 3;
	TRANSFER = 4;
	CLOSING = 5;
	CLOSED = 6;
}

enum FTPMessageType {
	OPEN_AN_FTP_SERVICE_TO_THE_GIVEN_FTP_SERVER = 0;
	CLOSE_THE_FTP_SERVICE = 1;
	UPLOAD_A_FILE_TO_THE_FTP_SERVER = 2;
	SET_THE_PATH_IN_THE_FTP_SERVER_TO_UPLOAD_OR_DOWNLOAD_FILE = 3;
	SET_THE_USER_NAME_OF_THE_ACCOUNT_TO_OPEN_FTP_SERVICE = 4;
	SET_THE_PASSWORD_OF_THE_ACCOUNT_TO_OPEN_FTP_SERVICE = 5;
	SET_SOME_CONFIGURABLE_PARAMETERS_FOR_THE_FTP_SERVICE = 6;
	QUERY_STATUS_OF_FTP_SERVICE = 7;
	QUERY_THE_REAL_SIZE_TRANSFERED_IN_THE_LATEST_TRANSFER = 8;
	RENAME_FILE_OR_FOLDER_NAME_ON_THE_FTP_SERVER = 9;
	QUERY_THE_SIZE_OF_APPOINTED_FILE_ON_THE_FTP_SERVER = 10;
	DELETE_THE_APPOINTED_FILE_ON_THE_FTP_SERVER = 11;
	ESTABLISH_A_NEW_FILEFOLDER_ON_THE_FTP_SERVER = 12;
	REMOVE_A_FILEFOLDER_ON_THE_FTP_SERVER = 13;
	LIST_CONTENTS_OF_DIRECTORY_OR_FILE_INFORMATION_ON_THE_FTP_SERVER = 14;
	LIST_FILE_NAMES_IN_THE_GIVEN_DIRECTORY_ON_THE_FTP_SERVER = 15;
}

enum FileMessageType {
	GET_STORAGE_DATE_SIZE = 0;
	LIST_FILES = 1;
	UPLOAD_FILE_TO_STORAGE = 2;
	DOWNLOAD_FILE_FROM_STORAGE = 3;
	DELETE_FILE_IN_STORAGE = 4;
	MOVE_FILE = 5;
	OPEN_FILE = 6;
	READ_FILE = 7;
	WRITE_FILE = 8;
	SEEK_FILE = 9;
	CLOSE_FILE = 10;
	GET_OFFSET_OF_THE_FILE_POINTER = 11;
	FORCE_TO_WRITE_DATA_REMAINING_IN_THE_FILE_BUFFER = 12;
	TRUNCATE_THE_SPECIFIED_FILE_FROM_FILE_POINTER = 13;
}

enum HTTPMessageType {
	SET_HTTP_SERVER_URL = 0;
	SEND_HTTP_GET_REQUEST = 1;
	READ_HTTP_SERVER_RESPONSE = 2;
	SEND_HTTP_POST_REQUEST = 3;
	DOWNLODA_FILE_FROM_HTTP_SERVER = 4;
}

enum Error {
	OK = 0;
	UNKNOW_ERROR = 1;
	SERVICE_BUSY = 3;
	FAILED_TO_GET_IP_ADDRESS = 4;
	NETWORK_ERROR = 5;
	FTP_SESSION_CLOSED = 6;
	DATA_CONNECTION_CLOSED = 7;
	GPRS_CSD_CONTEXT_IS_DEACTIVATED = 8;
	TIMEOUT = 9;
	INPUT_PARAMETER_ILLEGAL = 10;
	FILE_NOT_FOUND_IN_LOCAL_POSITION = 11;
	FAILED_TO_GET_FILE_IN_LOCAL_POSITION = 12;
	NO_ENOUGH_MEMORY = 13;
	FAILED_TO_SAVE_THE_ATTACHMENT = 14;
	THE_INPUT_PARAMETER_IS_WRONG = 15;
	FTP_SERVER_CANT_SUPPORT_SERVICE = 421;
	FAILDE_TO_OPEN_DATA_CONNECTION = 425;
	THE_CONNECTION_IS_CLOSED_AND_STOP_TRANSFER = 426;
	THE_REQUEST_FOR_FILE_ISNT_OPERATED = 450;
	THE_FTP_SERVER_HAS_NOT_ENOUGH_MEMORY = 452;
	THE_FORMAT_OF_THE_FTP_COMMAND_IS_WRONG = 500;
	THE_PATTERN_OF_THE_FTP_COMMAND_IS_WRONG = 501;
	THE_FTP_COMMAND_ISNT_OPERATED_BY_FTP_SERVER = 502;
	BAD_SEQUENCE_OF_COMMANDS = 503;
	COMMAND_PARAMETER_NOT_IMPLEMENTED = 504;
	DOMAIN_DOES_NOT_ACCEPT_EMAIL = 521;
	NOT_LOGIN_TO_FTP_SERVER = 530;
	NEEDED_INFORMATION_OF_ACCOUNT = 532;
	AUTHENTICATION_FAILED = 535;
	THE_REQUEST_IS_NOT_OPERATED = 550;
	THE_REQUEST_IS_STOPPED = 551;
	THE_REQUEST_OF_A_FILE_IS_STOPPED = 552;
	FILE_NAME_IS_ILLEGAL = 553;
	TRANSACTION_FAILED = 554;
	HTTP_TIME_OUT = 3801;
	HTTP_BUSY = 3802;
	HTTP_UART_BUSY = 3803;
	HTTP_GET_NO_REQUEST = 3804;
	HTTP_NETWORK_BUSY = 3805;
	HTTP_NETWORK_OPEN_FAILED = 3806;
	HTTP_NETWORK_NO_CONFIG = 3807;
	HTTP_NETWORK_DEACTIVE = 3808;
	HTTP_NETWORK_ERROR = 3809;
	HTTP_URL_ERROR = 3810;
	HTTP_EMPTY_URL = 3811;
	HTTP_IP_ADDR_ERROR = 3812;
	HTTP_DNS_ERROR = 3813;
	HTTP_SOCKET_CREATE_ERROR = 3814;
	HTTP_SOCKET_CONNECT_ERROR = 3815;
	HTTP_SOCKET_READ_ERROR = 3816;
	HTTP_SOCKET_WRITE_ERROR = 3817;
	HTTP_SOCKET_CLOSE = 3818;
	HTTP_DATA_ENCODE_ERROR = 3819;
	HTTP_DATA_DECODE_ERROR = 3820;
	HTTP_TO_READ_TIMEOUT = 3821;
	HTTP_RESPONSE_FAILED = 3822;
	INCOMING_CALL_BUSY = 3823;
	VOICE_CALL_BUSY = 3824;
	INPUT_TIMEOUT = 3825;
	WAIT_DATA_TIMEOUT = 3826;
	WAIT_HTTP_RESPONSE_TIMEOUT = 3827;
	ALLOC_MEMORY_FAIL = 3828;
	HTTP_NEED_RELOCATION = 3829;
	INVALID_INPUT_VALUE = 3865;
	MMS_TIME_OUT = 3901;
	URL_TOO_LONG = 3902;
	INVALID_URL = 3903;
	UNSUPPORTED_PROXY = 3904;
	INVALID_PROXY_ADDRESS = 3905;
	IP_ADDRESS_ERROR = 3906;
	DNS_ERROR = 3907;
	PARAMETER_ERROR = 3908;
	TO_ADDRESS_EXCEEDED = 3909;
	CC_ADDRESS_EXCEEDED = 3910;
	BCC_ADDRESS_EXCEEDED = 3911;
	APPENDED_FILE_CAPACITY_EXCEEDED = 3912;
	FILE_NAME_TOO_LONG = 3913;
	THE_NUMBER_OF_FILE_EXCEEDED = 3914;
	NON_EXISTENT_ADDRESS = 3915;
	UFS_STORAGE_FULL = 3916;
	DRIVE_FULL = 3917;
	DRIVE_ERROR = 3918;
	NOT_FOUND = 3919;
	INVALID_FILE_NAME = 3920;
	FILE_ALREADY_EXISTED = 3921;
	FAILED_TO_CREATE_FILE = 3922;
	FAILED_TO_WRITE_FILE = 3923;
	FAILED_TO_OPEN_FILE = 3924;
	FAILED_TO_READ_FILE = 3925;
	MMS_BUSY = 3926;
	SENDING_MMS_BUSY = 3927;
	SENDING_MMS_STOPPED = 3928;
	ALREADY_STOPPED_TO_SEND = 3929;
	RECEIVING_MMS_BUSY = 3930;
	RECEIVING_MMS_STOPPED = 3931;
	ALREADY_STOPPED_RECEIVE = 3932;
	HTTP_RESPONSE_FALIURE = 3933;
	INVALID_MMS_RESPONSE = 3934;
	MMS_RESPONSE_ERROR = 3935;
	INVALID_PUSH_MESSAGE = 3936;
	ALREADY_DONWLOADED = 3937;
	NETWORK_BUSY = 3938;
	FAILED_TO_OPEN_NETWORK = 3939;
	NETWORK_NO_CONFIGURED = 3940;
	NETWORK_DEACTIVATED = 3941;
	MMS_NETWORK_ERROR = 3942;
	NETWORK_SHUTDOWN = 3943;
	UART_BUSY = 3944;
	UART_ESCAPED = 3945;
	FAILED_TO_CREATE_SOCKET = 3946;
	FAILED_TO_CONNECT_SOCKET = 3947;
	FAILED_TO_READ_SOCKET = 3948;
	FAILED_TO_WRITE_SOCKET = 3949;
	SOCKET_CLOSED = 3950;
	MMS_LENGTH_ERROR = 3951;
	FAILED_TO_ENCODE_MMS = 3952;
	FAILED_TO_DECODE_MMS = 3953;
	FAILED_TO_DECODE_HTTP = 3954;
	FAILED_TO_DECODE_PUSH_MESSAGE = 3955;
	PDU_ALIGN_ERROR = 3956;
	PDU_CHARACTER_ERROR = 3957;
	STRING_TOO_LONG = 3958;
	MMS_FULL = 3959;
	NON_EXISTENT_MMS = 3960;
	INVALID_ADDRESS = 3961;
	MMS_VOICE_CALL_BUSY = 3962;
	ALLOC_MEMORY_FAILED = 3963;
	EXCEED_MAX_LENGTH = 4000;
	OPEN_FILE_FAIL = 4001;
	WRITE_FILE_FAIL = 4002;
	GET_SIZE_FAIL = 4003;
	READ_FAIL = 4004;
	LIST_FILE_FAIL = 4005;
	DELETE_FILE_FAIL = 4006;
	GET_DISC_INFO_FAIL = 4007;
	NO_SPACE = 4008;
	TIME_OUT = 4009;
	HTTP_FILE_NOT_FOUND = 4010;
	FILE_TOO_LARGE = 4011;
	FILE_ALREADY_EXIST = 4012;
	INVALID_PARAMETER = 4013;
	DRIVER_ERROR = 4014;
	CREATE_FAIL = 4015;
	ACCESS_DENIED = 4016;
	FILE_IS_TOO_LARGE = 4017;
	WRONG_FORMAT = 4300;
	AUDIO_TASK_BUSY = 4302;
	CREATE_FILE_FAILED = 4303;
	ADDITIONAL_RECORDING_IN_A_DIFFERENT_FORMAT = 4304;
	DISC_FULL = 4305;
	WRITE_PROTECTION_ON_FILE = 4306;
	RECORDING_UNKNOW_ERROR = 4499;
}